# portfolio-mcp

./: .env.example  .gitignore  CLAUDE.md  CLAUDE_PROJECT.md  README.md  check portfolio.ipynb  modal_app.py  pyproject.toml
docs/: 2026-01-21_options_data_api_research.md  TODO_polygon_evaluation.md  options_data_api_research.md
docs/langfuse/: LANGFUSE_INTEGRATION_GUIDE.md  LANGFUSE_OBSERVABILITY_SPEC.md
src/portfolio_mcp/: __init__.py  observability.py  server.py  tools.py
