[project]
name = "portfolio-mcp"
version = "0.1.0"
description = "MCP server for portfolio risk analysis and options monitoring"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.0.0",
    "pandas>=2.0.0",
    "polygon-api-client>=1.14.0",
]

[project.scripts]
portfolio-mcp = "portfolio_mcp:run_server"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/portfolio_mcp"]
