[project]
name = "portfolio-mcp"
version = "0.1.0"
description = "MCP server for portfolio risk analysis and options monitoring with Claude Desktop"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
keywords = ["mcp", "portfolio", "options", "trading", "claude", "anthropic", "polygon"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
]
dependencies = [
    "fastmcp>=2.0.0",
    "langfuse>=3.12.1",
    "opentelemetry-api>=1.39.1",
    "opentelemetry-exporter-otlp>=1.39.1",
    "opentelemetry-sdk>=1.39.1",
    "pandas>=2.0.0",
    "polygon-api-client>=1.14.0",
]

[project.scripts]
portfolio-mcp = "portfolio_mcp:run_server"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/portfolio_mcp"]
